--- a/PROJETO-BACK-END-CRIPT/src/public/login.html
+++ b/PROJETO-BACK-END-CRIPT/src/public/login.html
@@ -12,7 +12,7 @@
   <div class="card shadow-lg p-4" style="width: 350px;">
     <h3 class="text-center mb-4">Login</h3>
     <!-- Formulário de login -->
-    <form action="/login" method="POST">
+    <form action="/login" method="POST" id="frmLogin">
       <!-- Campo de e-mail -->
       <div class="mb-3">
         <label for="email" class="form-label">E-mail</label>
@@ -30,5 +30,38 @@
 
   <!-- Importando o JS do Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  document.getElementById('frmLogin').addEventListener('submit', async function (event) {
+    const email = document.getElementById('email').value;
+    const senha = document.getElementById('senah').value;
+    
+    try {
+      const endpoint = "localhost:3000/login"
+      const response = await fetch(endpoint, {
+        method: "POST",
+        headers: {
+          "Content-type": "application/json"
+        },
+        body: JSON.stringify({email,senha})
+      })
+
+      if(!response.ok)
+      console.log("Error: ", response.status)
+
+      const data = await response.json();
+      console.log("Resposta do servidor: ", data)
+
+      if(data){
+        alert("Sucesso! Usuario autenticado.")  
+      } else{
+        alert ("Usuario ou senha incorreta.")
+      }
+
+    } catch (error) {
+      console.log("Error: ", error)
+    }
+  })
+</script>
+
 </body>
 </html>
